惠头条，趣看天下 任务调整

--- a/Task_Remote.conf
+++ b/Task_Remote.conf
@@ -621,13 +621,13 @@
 # 作者的邀请码:53150681 
 # nzw9314邀请码: 12773106
 #时段签到, 阅读数据, 小视频和视频 4个cookie
-*/2 0-11/1 * * * https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Task/htt_task.js, tag=惠头条
+0 0/2 * * * ? https://raw.githubusercontent.com/wangdelu2020/hongliyu/master/htt_task_4.js, tag=惠头条, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/htt.png, enabled=false
 
 # 趣看天下(By 红鲤鱼与绿鲤鱼与驴)
 # 作者的邀请码:9656852 
 # nzw9314邀请码:9850323
 # iepngs邀请码:9848880
-*/3 0-20/1 * * * https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Task/qktx_task.js, tag=趣看天下
+0 21,31,50 0-22 * * ? https://raw.githubusercontent.com/wangdelu2020/hongliyu/master/qktx_task3.js, tag=趣看天下, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/qktx.png
 
 # 特仑苏 (By 红鲤鱼与绿鲤鱼与驴)
 # 点击进入“特仑苏向往的生活”小程序授权登录后    点击放牧获取ck
