惠头条，趣看天下 任务调整

--- a/Task_Remote.conf
+++ b/Task_Remote.conf
@@ -621,7 +621,7 @@
 # 作者的邀请码:53150681 
 # nzw9314邀请码: 12773106
 #时段签到, 阅读数据, 小视频和视频 4个cookie
-0 0/2 * * * ? https://raw.githubusercontent.com/wangdelu2020/hongliyu/master/htt_task_4.js, tag=惠头条, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/htt.png, enabled=false
+*/2 0-11/1 * * * https://raw.githubusercontent.com/wangdelu2020/hongliyu/master/htt_task_4.js, tag=惠头条, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/htt.png, enabled=false
 
 # 趣看天下(By 红鲤鱼与绿鲤鱼与驴)
 # 作者的邀请码:9656852 
