增加小米有品签到

--- a/Task_Remote.conf
+++ b/Task_Remote.conf
@@ -677,4 +677,4 @@
 
 # 小米有品
 # # 获取方式:进入签到页面获取，https://m.xiaomiyoupin.com:个人中心->我的资产->积分
-1 0 * * * https://raw.githubusercontent.com/dompling/Script/master/xiaomiyp/xiaomiyp.js, tag=小米有品
+1 0 * * * https://raw.githubusercontent.com/dompling/Script/master/xiaomiyp/xiaomiyp.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/xiaomiyp.png, tag=小米有品
