--- a/Get_Cookie_Remote.conf
+++ b/Get_Cookie_Remote.conf
@@ -409,5 +409,5 @@ https:\/\/(www\.baimaa\.com|www\.2xtj7\.cn|www\.hnmiaosu\.cc|ph0001\.hezyq\.com|
 # 1.阅读文章弹出金币
 # 2.签到
 # 3.我的农场
-^https:\/\/is\.snssdk\.com\/score_task\/v1\/task\/(sign_in|get_read_bonus) url script-request-header https://raw.githubusercontent.com/iepngs/Script/master/jrtt/index.js
-^https:\/\/i\.snssdk\.com\/ttgame\/game_farm\/home_info url script-request-header https://raw.githubusercontent.com/iepngs/Script/master/jrtt/index.js
+^https:\/\/is\.snssdk\.com\/score_task\/v1\/task\/(sign_in|get_read_bonus) url script-request-body https://raw.githubusercontent.com/iepngs/Script/master/jrtt/index.js
+^https:\/\/i\.snssdk\.com\/ttgame\/game_farm\/home_info url script-request-body https://raw.githubusercontent.com/iepngs/Script/master/jrtt/index.js
