--- a/Get_Cookie_Remote.conf
+++ b/Get_Cookie_Remote.conf
@@ -413,4 +413,4 @@ https:\/\/(www\.baimaa\.com|www\.2xtj7\.cn|www\.hnmiaosu\.cc|ph0001\.hezyq\.com|
 ^https:\/\/i\.snssdk\.com\/ttgame\/game_farm\/home_info url script-request-header https://raw.githubusercontent.com/iepngs/Script/master/jrtt/index.js
 
 #京东旗下京喜
-https:\/\/wq\.jd\.com\/pgcenter\/sign\/QueryPGDetail\?sceneval=2&pageSize=20 url script-request-body https://raw.githubusercontent.com/Sunert/Scripts/master/Task/jingxi.js
+https:\/\/wq\.jd\.com\/pgcenter\/sign\/QueryPGDetail\?sceneval=2&pageSize=20 url script-request-header https://raw.githubusercontent.com/Sunert/Scripts/master/Task/jingxi.js
