增加微信签到打卡

--- a/Get_Cookie_Remote.conf
+++ b/Get_Cookie_Remote.conf
@@ -414,3 +414,6 @@ https:\/\/(www\.baimaa\.com|www\.2xtj7\.cn|www\.hnmiaosu\.cc|ph0001\.hezyq\.com|
 
 #京东旗下京喜
 https:\/\/wq\.jd\.com\/pgcenter\/sign\/QueryPGDetail\?sceneval=2&pageSize=20 url script-request-header https://raw.githubusercontent.com/Sunert/Scripts/master/Task/jingxi.js
+
+#QX 梨涡App签到
+https:\/\/api\.m\.jd\.com\/api\/v1\/sign\/doSign url script-request-body https://raw.githubusercontent.com/wangdelu2020/hongliyu/master/liwosign.js
