增加智行火车

--- a/Get_Cookie_Remote.conf
+++ b/Get_Cookie_Remote.conf
@@ -423,3 +423,10 @@ https:\/\/(www\.baimaa\.com|www\.2xtj7\.cn|www\.hnmiaosu\.cc|ph0001\.hezyq\.com|
 
 #QX 梨涡App签到
 https:\/\/api\.m\.jd\.com\/api\/v1\/sign\/doSign url script-request-body https://raw.githubusercontent.com/wangdelu2020/hongliyu/master/liwosign.js
+
+# 智行火车票
+^https:\/\/m\.ctrip\.com/restapi/soa2/14593/json/attendanceDay? url script-request-body https://raw.githubusercontent.com/chavyleung/scripts/master/zxhc/zxhc.cookie.js
+
+
+
+
