宠汪汪助力获取Cookie

--- a/Get_Cookie_Remote.conf
+++ b/Get_Cookie_Remote.conf
@@ -431,7 +431,7 @@ https:\/\/api\.m\.jd\.com\/api\/v1\/sign\/doSign url script-request-body https:/
 ^https:\/\/cloud\.umetrip\.com\/gateway\/api\/web\/rest\/polite\/app\/sign\/signpageinitdata url script-request-header https://raw.githubusercontent.com/zZPiglet/Task/master/umetrip/umetrip.js
 
 # 宠汪汪助力获取Cookie
+^https:\/\/draw\.jdfcloud\.com\/\/api\/user\/addUser\?code=\w+& url script-response-body https://raw.githubusercontent.com/lxk0301/scripts/master/jd_joy_run.js
 ^https:\/\/draw\.jdfcloud\.com\/\/api\/bean\/square\/silverBean\/task\/get\? url script-request-header https://raw.githubusercontent.com/lxk0301/scripts/master/jd_joy_run.js
-
 
 
