[奥利给直播] unlock

--- a/Js.conf
+++ b/Js.conf
@@ -550,5 +550,8 @@ https:\/\/api\.gamer\.com\.tw\/mobile_app\/anime\/v3\/token\.php url script-resp
 #奥利给直播会员
 ^https?:\/\/1008610010\.yohui\.vip\/index\.php\/Api\/LiveApi\/getMovietime url script-response-body https://raw.githubusercontent.com/258404256/QX/master/scripts/AoLiGei.js
 
+#全家桶会员（by卢本伟-黑黑酱）
+^https://app.xunjiepdf.com/api/v4/virtualactregister url script-response-body https://raw.githubusercontent.com/258404256/QX/master/scripts/qjt.js
+
 
 
