--- a/Js.conf
+++ b/Js.conf
@@ -59,8 +59,8 @@ https:\/\/.*\..*\.com\/(vod\/reqplay\/|ucp/index|getGlobalData) url script-respo
 # 大片-视频编辑器 VIP
 ^https?:\/\/api\.vnision\.com\/v1\/(users\/|banners) url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/dapian.js
 
-# 91短视频
-^https?:\/\/.+\.(my10api|(.*91.*))\.(com|tips|app|xyz)(:\d{2,5})?\/api.php$ url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/91.js
+#解锁91短视频vip
+^https?:\/\/.+\.(my10api|(.*91.*))\.(com|tips|app|xyz)(:\d{2,5})?\/api.php$ url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/91.js
 
 #黄瓜视频无限观影 + 解锁付费影片
 #黄瓜视频下载地址：http://suo.im/5Fc3Ls
