宠汪汪邀请助力与赛跑助力

--- a/Get_Cookie_Remote.conf
+++ b/Get_Cookie_Remote.conf
@@ -430,3 +430,10 @@ https?:\/\/api\.umer\.com\.cn\/.*getCurrentUmerSign url script-request-header ht
 
 #显示京东历史价格（启动圈X自动生效）
 ^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/jd_price.js
+
+# 宠汪汪邀请助力与赛跑助力, 宠汪汪助力更新Token
+^https:\/\/draw\.jdfcloud\.com\/\/api\/user\/addUser\?code=\w+& url script-response-body https://raw.githubusercontent.com/lxk0301/scripts/master/jd_joy_run.js
+# 宠汪汪助力获取Token
+^https:\/\/draw\.jdfcloud\.com\/\/api\/bean\/square\/silverBean\/task\/get\? url script-request-header https://raw.githubusercontent.com/lxk0301/scripts/master/jd_joy_run.js
+
+
