--- a/Get_Cookie_Remote.conf
+++ b/Get_Cookie_Remote.conf
@@ -108,7 +108,7 @@ https:\/\/mobile01\.91quzou\.com\/rebate\/qz\/task\/homeTaskView\.do url script-
 ^https:\/\/api\.kkmh\.com\/v\d\/passport\/user url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/KuaiKan-DailyBonus/KKMH.js
 
 #乐心健康步数上传
-^https:\/\/sports\.lifesense\.com\/sport_service\/sport\/sport\/uploadMobileStepV2 url script-request-body https://raw.githubusercontent.com/iepngs/Script/master/lxhealth/manual.js
+^https?:\/\/sports\.lifesense\.com\/sport_service\/sport\/sport\/uploadMobileStepV2 url script-request-body https://raw.githubusercontent.com/iepngs/Script/master/lxhealth/index.js
 
 #go语言中文网签到
 https:\/\/studygolang\.com\/account\/edit url script-request-header https://raw.githubusercontent.com/iepngs/Script/master/studygolang/index.js
